# smt-cli

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: blake2b.rs  main.rs
tests/: run-test.sh
tests/outputs/: multi_3.txt  simple_exclude.txt  simple_include.txt  simple_include_0.txt  simple_include_1.txt
