[package]
name = "smt-cli"
version = "1.0.0"
authors = ["xjd <xjd@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = { path="deps/sparse-merkel-tree"}
clap = "2.33.3"
blake2b-rs = { version = "0.1" }
lazy_static = "1.3.0"
